--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: PlayerStats
-version: 0.1
-main: me.keeeenion.playerstats.Main
-description: Stores player stats in configs.
-author: keeeenion
+version: 0.6
+main: me.keeeenion.playerapi.PlayerAPI
+description: Manages player's stats, metadata.
+author: Keeeenion
